исправленное на индекс хтмл

--- a/gimn.html
+++ b/gimn.html
@@ -8,7 +8,7 @@
     <body>
         <header>
          <img src="e.jpg">
-         <h1><a href="site.html">Футбол</a></h1>
+         <h1><a href="index.html">Футбол</a></h1>
         </header>
         <main>
         <p>Футбольный клуб Барселона</p>
