--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
         </nav>
         <main>
-        <p>Футбольный клуб Барселона</p>
+        <p>Футбольный клуб <Барселона></p>
         <ol>
             <li><a href= "tro.html">Трофеи</a></li>
             <li><a href="history.html">История</a></li>
