--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset=8-utf>
-         <title>Спорт</title>
+         <title>Спортт</title>
          <link href="style.css" rel="stylesheet">
     </head>
     <body>
